# aureum

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  check  check-golden  check-golden.sh  check.sh  run_spec.sh  test_spec.sh
.github/workflows/: ci.yml
aureum/: Cargo.toml
aureum-cli/: Cargo.toml
aureum-cli/assets/: 02-nested-tests.au.toml  02_nested_tests.au.toml  03-all-supported-fields.au.toml  03_all_supported_fields.au.toml
aureum-cli/src/: args.rs  config_file.rs  counts.rs  exit_code.rs  file.rs  find_config_file.rs  format.rs  init.rs  load_config_file.rs  main.rs  report.rs  scratch_session.rs  stable_output.rs  template.rs  test_path.rs  watch.rs
aureum-cli/src/cli/: file.rs  test_path.rs
aureum-cli/src/commands/: common.rs  format.rs  init.rs  list.rs  mod.rs  run.rs  test.rs  validate.rs
aureum-cli/src/interactive/: accept.rs  action.rs  diff_content.rs  diff_render.rs  diff_view.rs  field.rs  keys.rs  list_view.rs  mod.rs  progress_view.rs  review_loop.rs  style.rs  test_helpers.rs  theme.rs  tty.rs  watch_view.rs
aureum-cli/src/interactive/utils/: frame.rs  mod.rs  program_display.rs  spans.rs  test_helpers.rs  widgets.rs
aureum-cli/src/interactive/views/: diff_content.rs  diff_render.rs  diff_view.rs  error_view.rs  list_view.rs  mod.rs  progress_view.rs  watch_view.rs
aureum-cli/src/report/: format.rs  init.rs  label.rs  list.rs  mod.rs  run.rs  symbol.rs  test.rs  test_case.rs  theme.rs  validate.rs
aureum-cli/src/report/formats/: summary.rs  tap.rs
aureum-cli/src/utils/: file.rs  glob.rs  shell.rs  time.rs  toml.rs
aureum-cli/tests/: scratch_cleanup.rs  scratch_cleanup_windows.rs
aureum/src/: lib.rs  report.rs  rerun_script.rs  scratch.rs  subtest_path.rs  subtest_path_coverage_set.rs  test_case.rs  test_case_id.rs  test_id.rs  test_id_coverage_set.rs  test_outcome.rs  test_result.rs  test_runner.rs
aureum/src/formats/: summary.rs  tap.rs  tree.rs
aureum/src/report/: list.rs  run.rs  symbol.rs  test_case.rs  validate.rs
aureum/src/toml/: config.rs  parse.rs  requirement.rs  validate.rs
aureum/src/utils/: diff.rs  file.rs  string.rs  tree.rs
examples/: 02_cat_multiline_text.au.toml  03-bash-hello-world.au.toml  03_bash_hello_world.au.toml
golden/basic/: expect-exit-code.au.toml  expect-stderr.au.toml  large-unread-stderr.au.toml  read-embed.au.toml  read-env-var.au.toml  read-external-file.au.toml  run-bash.au.toml
golden/commands/: help.au.toml  no-args.au.toml  no_args.au.toml
golden/common/nested-tests-insertion-order/: commands.au.toml
golden/common/nested-tests-mixed-validity/: list-tree.au.toml  list.au.toml  run-format-passthrough.au.toml  run-format-toml.au.toml  test-format-summary.au.toml  test-format-tap.au.toml  test-interactive.au.toml  validate.au.toml
golden/common/nested_tests_mixed_validity/: run_format_toml.au.toml  test_format_tap.au.toml
golden/common/skip/: test-format-summary.au.toml  test-format-tap.au.toml  test-interactive-watch.au.toml  (+4 more)
spec/aureum/: help.au.toml  no_args.au.toml
spec/commands/: help.au.toml  no_args.au.toml
spec/toml/: field_types.au.toml  special_forms.au.toml  syntax.au.toml  test_ids.au.toml  unknown_fields.au.toml  watch_files.au.toml
src/: lib.rs  main.rs  test_case.rs  test_id.rs  test_id_container.rs  test_runner.rs  toml_config.rs
src/cli/: args.rs  file.rs  mod.rs  report.rs
src/formats/: tap.rs  tree.rs
src/toml/: config.rs
src/utils/: file.rs
tests/: file_utils_test.rs
(+393 files in other folders)
