[package]
name = "aureum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
diff = "0.1.13"
glob = "0.3.1"
indoc = "2.0.0"
itertools = "0.14.0"
pathdiff = "0.2.1"
rayon = "1.6.1"
relative-path = "1.7.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
toml = "0.8.20"
which = "7.0.2"
