[package]
name = "aureum"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
diff = "0.1.13"
glob = "0.3.3"
indoc = "2.0.7"
itertools = "0.14.0"
pathdiff = "0.2.3"
rayon = "1.11.0"
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.3"
toml = "1.0.6"
which = "8.0.2"
