[package]
name = "aureum-cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aureum = { path = "../aureum" }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
glob = "0.3.3"
itertools = "0.14.0"
os_str_bytes = "7.1.1"
pathdiff = "0.2.3"
relative-path = "2.0.1"
which = "8.0.2"

[[bin]]
name = "aureum"
path = "src/main.rs"
