[package]
name = "aureum-cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aureum = { path = "../aureum" }
clap = { version = "4.6.1", features = ["derive"] }
chrono = "0.4"
colored = "3.1.1"
crossterm = "0.29"
globset = "0.4"
itertools = "0.14.0"
notify-debouncer-mini = "0.4"
os_str_bytes = "7.1.1"
pathdiff = "0.2.3"
ratatui = "0.30"
relative-path = "2.0.1"
toml_edit = "0.25.11"
which = "8.0.2"
yaml_serde = "0.10.4"

[[bin]]
name = "aureum"
path = "src/main.rs"
