[package]
name = "aureum"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.1.1"
diff = "0.1.13"
itertools = "0.14.0"
rayon = "1.11.0"
relative-path = "2.0.1"
yaml_serde = "0.10.3"
toml = "1.0.6"
which = "8.0.2"

[dev-dependencies]
indoc = "2.0.7"
